# iptools

./: .Rbuildignore  .gitignore  .travis.yml  CRAN-RELEASE  DESCRIPTION  INSTALL  LICENSE  NAMESPACE  NEWS.md  README  README.Rmd  README.html  README.md  _README.Rmd  cleanup  config.status  configure  configure.in  cran-comments.md  index.html  iptools.Rproj
R/: RcppExports.R  aaa.r  asn.r  cidr.r  country_ranges.R  dataset_refreshers.R  datasets.R  generators.R  geoip.R  heatmap.R  ianaipv4assignments.R  ianaipv4spar.R  ianaports.R  ianaprotocolnumbers.R  ianarootzonetlds.R  ip-to-subnet.R  ip6-to-nibble.R  iptools-package.R  iptools.R  is.R  zzz.R
autom4te.cache/: output.0  requests  traces.0
data/: iana_assignments.rda  iana_ports.rda  iana_special_assignments.rda  ianaipv4assignments.rda  ianaipv4spar.rda  ianaports.rda  ianaprotocolnumbers.rda  ianarootzonetlds.rda
docs/: index.html
docs/articles/: index.html  introduction_to_iptools.html  iptools_datasets.html
docs/news/: index.html
docs/reference/: asn_table_to_trie.html  cached_country_cidrs.html  country_ranges.html  expand_ipv6.html  flush_country_cidrs.html  get_all_country_ranges.html  hilbert_encode.html  hostname_to_ip.html  iana_assignments.html  iana_ports.html  iana_special_assignments.html  index.html  ip_classify.html  ip_in_any.html  ip_in_range.html  ip_numeric.html  ip_numeric_to_binary_string.html  ip_random.html  ip_to_asn.html  ip_to_binary_string.html  ip_to_hostname.html  ips_in_cidrs.html  iptools.html  iptools_refresh.html  is_checks.html  range_boundaries.html  range_generate.html  v6_scope.html  validate_range.html  xff_extract.html
inst/js/: bundle.js  in.js
inst/test/: rib.tst
man/: as_lookup.Rd  asn_db_is_loaded.Rd  asn_table_to_trie.Rd  asnip.Rd  boundingBoxFromCIDR.Rd  cached_country_cidrs.Rd  cidr_ips.Rd  cidr_range.Rd  classify_ip.Rd  country_ranges.Rd  expand_ipv6.Rd  flush_country_cidrs.Rd  generate_range.Rd  geoCleanup.Rd  geofile.Rd  geoip.Rd  get_all_country_ranges.Rd  gethostbyaddr.Rd  gethostbyname.Rd  gethostsbyaddr.Rd  gethostsbyname.Rd  hilbert_encode.Rd  host_count.Rd  hostname_to_dns.Rd  hostname_to_ip.Rd  iana_assignments.Rd  iana_assignments_refresh.Rd  iana_ports.Rd  iana_special_assignments.Rd  ianaipv4assignments.Rd  ianaipv4spar.Rd  ianaports.Rd  ianaprotocolnumbers.Rd  ianarootzonetlds.Rd  ip2long.Rd  ip_classify.Rd  ip_in_any.Rd  ip_in_cidr.Rd  ip_in_range.Rd  ip_numeric.Rd  (+29 more)
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  asio_bindings.cpp  asio_bindings.h  asn.cpp  dns.cpp  dns.h  heatmap.cpp  heatmap.h  hilbert.cpp  inet_pton.h  init.c  iptools.cpp  rgeoip.cpp
src-i386/: iptools.cpp
src-x64/: RcppExports.cpp  asio_bindings.cpp  asio_bindings.h
src/windows/: inet_pton.c
tests/: test-all.R
tests/testthat/: test-cidr-ops.R  test-iptools.R  test-v6.R  test_asn.R  test_generators.R  test_host_resolution.R  test_ip_conversion.R  test_ip_in_range.R  test_is.R  test_range_boundaries.R  test_range_validation.R  text_xff_extraction.R
vignettes/: introduction_to_iptools.R  introduction_to_iptools.Rmd  introduction_to_iptools.html  iptools_datasets.R  iptools_datasets.Rmd  iptools_datasets.html
